Fix images viewing on safari. Does not fix landscape phones and tablets. Temporary Fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ strong {
 }
 
 .page_content {
-    margin: 2% 25%;
+    margin: 2% 6%;
     font-size: 1.1rem;
     font-family: Open Sans;
     display: block;
@@ -100,6 +100,7 @@ strong {
 
 .bottom_row_image {
   width: 25%;
+  height: 20%;
 }
 
 .about_me_content {
